[package]
name = "mossad"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Compression
flate2 = "1.0"

# Crypto
kuznyechik = "0.8"
ctr = "0.9"
cipher = "0.4"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
crc64fast = "1.0"
zeroize = "1.7"

# Random
rand = "0.8"

# UX
indicatif = "0.17"
rpassword = "7.3"

# Filesystem
walkdir = "2.5"
