[package]
name = "mossad"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
cipher = "0.3"
clap = { version = "4.0", features = ["derive"] }
crc64fast = "1.0"
ctr = "0.8"
flate2 = "1.0"
hmac = "0.12"
indicatif = "0.17"
kuznyechik = "0.7"
rand = "0.8"
rpassword = "7.0"
sha2 = "0.10"
walkdir = "2.4"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
filetime = "0.2"
